# vitop

./: Cargo.toml  LICENSE  README  README.md  dist-workspace.toml
src/: main.rs
src/app/: app.rs
src/collector/: memory.rs  process.rs
src/ui/: draw.rs
test/: Cargo.toml  LICENSE  README.md
wix/: main.wxs
