[package]
name = "vitop"
version = "0.1.0"
edition = "2024"
description = "Mô tả app của bạn"   # bắt buộc
license = "MIT"                       # bắt buộc
repository = "https://github.com/you/your-app"  # bắt buộc cho CI

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
sysinfo = "0.30"


[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
