[package]
name = "vitop"
version = "0.1.0"
edition = "2024"
description = "Vitop cuts through the noise — a snappy, keyboard-driven TUI that lives in your terminal, monitors your machine in real time, and lets you nuke misbehaving processes without touching a mouse"
license = "MIT"
repository = "https://github.com/you/your-app"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
sysinfo = "0.30"


[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = true
